appId: dev.ipf.whitenoise.android.maestrolab
---
- runFlow: open-settings.yaml
- scrollUntilVisible:
    element:
      text: Privacy & Security
    direction: DOWN
- tapOn: Privacy & Security
- assertVisible:
    id: privacy.device_protection.group
- scrollUntilVisible:
    element:
      text: '(?s).*Require device authentication.*'
    direction: DOWN
- assertVisible:
    id: privacy.device_authentication
    enabled: true
    checked: true
    containsChild:
      text: '(?s).*Require device authentication.*'
